# Stones

./: .gitignore  Ball_test.cpp  Ball_test.hpp  Orlan.md  README.md  Wall_test.hpp  crown_report.md  noam.md  petr.md  report.md  ryan_report.md  video-plan.md
C++_db/: Storage.txt  Storage0.txt  db  db.cpp  db.hpp  game_util.hpp  main  main.cpp
C++_db/Replays/: Storage0.json
Constantin/fpga_move/: CMakeLists.txt
Constantin/fpga_move/Dependencies/jtag_atlantic/include/: jtag_atlantic.h
Constantin/fpga_move/Dependencies/jtag_atlantic/lib/: jtag_atlantic.lib
Constantin/fpga_move/include/: controller.hpp  objects.hpp
Constantin/fpga_move/src/: JTAG_UART_test.cpp  controller.cpp  main.cpp  objects.cpp
Constantin/imgui_test/: CMakeLists.txt
Constantin/imgui_test/color_shader/: color_shader_fs.txt
Constantin/imgui_test/imgui/: CMakeLists.txt
Constantin/imgui_test/include/: game_util.hpp  imgui_util.hpp  map.hpp
Constantin/imgui_test/src/: ball.cpp  imgui_util.cpp  main.cpp
Constantin/opengl_learning/: opengl_learning.sln
Constantin/opengl_learning/opengl_learning/: opengl_learning.vcxproj
Constantin/shader_test/: CMakeLists.txt
Constantin/shader_test/color_shader/: color_shader_fs.txt  color_shader_vs.txt
Constantin/shader_test/include/: ball.hpp  map.hpp  objects.hpp  shader.hpp  texture.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
Constantin/shader_test/src/: ball.cpp  game_util.cpp  main.cpp  map.cpp  objects.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
Map/: Map.hpp
Menus/include/: game_util.hpp  home_screen.hpp  menu_item.hpp  replay_client_side.hpp  replay_screen.hpp  replay_server_side.hpp
Menus/src/: button.cpp  home_screen.cpp  read_controller.cpp  replay_client_side.cpp  replay_screen.cpp  replay_server_side.cpp  test.cpp
Morgan/Menus/: CMakeLists.txt  button.cpp  button.hpp  home_screen.cpp  home_screen.hpp  menu_item.cpp  menu_item.hpp  readme.md  replay_screen.cpp  replay_screen.hpp  test.cpp
Morgan/Menus/include/: button.hpp  read_controller.hpp  replay_screen.hpp
Morgan/Menus/src/: home_screen.cpp  read_controller.cpp  replay_screen.cpp
Morgan/TCP/: Server.cpp  client.cpp
Morgan/UDP/: client_UDP.cpp  client_shell_test.sh  readme.md  server_UDP.cpp
Morgan/menu_real/: bull.txt  button.cpp  button.hpp  home_screen.cpp  home_screen.hpp  main.cpp  menu_item.cpp  menu_item.hpp
Noam/: create_table.cpp
Noam/TCP-UDP/Adding/: client_UDP.cpp  main.cpp
Noam/TCP-UDP/UDP/: client_UDP.cpp
Orlan/: Ball_test.cpp  Ball_test.hpp  Collision_detect.hpp  Hitbox.hpp  Wall_test.cpp
Petr/custom_hardware_filtering/: README.md  custom_hardware.qpf  custom_hardware.qsf  custom_hardware.qws  lab3.qsf.bak  lab3.qws  nios_accelerometer.qsys  nios_accelerometer.sopcinfo
Petr/custom_hardware_filtering/.qsys_edit/: nios_accelerometer.xml  nios_accelerometer_schematic.nlv  preferences.xml
Petr/custom_hardware_filtering/Golden_Top/: DE10_LITE_Golden_Top.v
Petr/custom_hardware_filtering/db/: .cmp.kpt  altsyncram_uoc1.tdf  custom_hardware.(0).cnf.cdb  custom_hardware.(0).cnf.hdb  custom_hardware.(1).cnf.cdb  custom_hardware.(1).cnf.hdb  custom_hardware.(10).cnf.cdb  custom_hardware.(10).cnf.hdb  custom_hardware.(100).cnf.cdb  custom_hardware.(100).cnf.hdb  custom_hardware.(101).cnf.cdb  custom_hardware.(101).cnf.hdb  custom_hardware.(102).cnf.cdb  custom_hardware.(102).cnf.hdb  custom_hardware.(103).cnf.cdb  custom_hardware.(103).cnf.hdb  custom_hardware.(104).cnf.cdb  custom_hardware.(104).cnf.hdb  custom_hardware.(105).cnf.cdb  custom_hardware.(105).cnf.hdb  custom_hardware.(106).cnf.cdb  custom_hardware.(106).cnf.hdb  custom_hardware.(107).cnf.cdb  custom_hardware.(107).cnf.hdb  custom_hardware.(108).cnf.cdb  custom_hardware.(108).cnf.hdb  custom_hardware.(109).cnf.cdb  custom_hardware.(109).cnf.hdb  custom_hardware.(11).cnf.cdb  custom_hardware.(11).cnf.hdb  custom_hardware.(110).cnf.cdb  custom_hardware.(110).cnf.hdb  custom_hardware.(111).cnf.cdb  custom_hardware.(111).cnf.hdb  (+610 more)
Petr/final_fpga_design/: nios_accelerometer.qsys
Petr/sound/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
Replay/: client_tcp.hpp  replay_packing.cpp  replay_unpacking.cpp  test.cpp  test_client.cpp
Ryan/JTAG_UART_test/: CMakeLists.txt  JTAG_UART_test.cpp  controller.cpp  controller.hpp  jtag_atlantic.def  jtag_client.def
Ryan/nios_accel_3d/: .cproject  .project  Makefile  create-this-app  nios_accel_3d.elf  nios_accel_3d.map  nios_accel_3d.objdump  nios_read_accel.c
Server/: CMakeLists.txt
Server/include/: Ball_test.hpp  Collision_detect.hpp  Hitbox.hpp  Wall_test.hpp  networking.hpp  packing.hpp
Server/src/: Ball.cpp  TCP_Function.cpp  TCP_Main.cpp  main_Con.cpp  networking.cpp  packing.cpp  server.cpp  udp.cpp
client/include/: client_tcp.hpp  client_threads.hpp  client_udp.hpp  winsock_start.hpp
client/src/: client_main.cpp  client_threads.cpp  client_udp.cpp  read_controller.cpp  winsock_start.cpp
final_fpga_design/compiled_and_executables/: nios_accelerometer.sopcinfo
final_fpga_design/files_for_compilation/: DE10_LITE_Golden_Top.v  fir.v  nios_accelerometer.qsys
project/netutils/: CMakeLists.txt
top/: CMakeLists.txt
top/client/color_shader/: color_shader_fs.txt  color_shader_vs.txt
top/client/include/: client_tcp.hpp  client_threads.hpp  client_udp.hpp  read_controller.hpp  winsock_start.hpp
top/client/src/: client_main.cpp  client_tcp.cpp  client_threads.cpp  client_udp.cpp  imgui_util.cpp  objects.cpp  read_controller.cpp  winsock_start.cpp
top/game_objects/: CMakeLists.txt
top/game_objects/include/: background.hpp  ball.hpp  game_util.hpp  map.hpp  objects.hpp  shader.hpp  texture.hpp  vertex_buffer_layout.hpp
top/game_objects/src/: background.cpp  ball.cpp  game_util.cpp  map.cpp  objects.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
top/netutils/: CMakeLists.txt  netutils.cpp  netutils.hpp
top/server/include/: Ball.hpp  Hitbox.hpp  Wall.hpp  db.hpp  networking.hpp
top/server/src/: Ball.cpp  db.cpp  networking.cpp  server.cpp
(+414 files in other folders)
